fix: enforce important rule for vertical alignment in table cells in general.scss and ensure newline at end of styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1044,7 +1044,7 @@ table.table-border {
 
 	td, th {
 		border: 1px solid #000;
-		vertical-align: middle;
+		vertical-align: middle !important;
 		text-align: center;
 		word-break: break-word;
 	}
